GearsetPOC/force-app/main/default/objects/SalesforceTicketDiscountRedemption__x/SalesforceTicketDiscountRedemption__x.object-meta.xml
<CustomObject>
    <description>SalesforceTicketDiscountRedemption</description>
    <externalDataSource>ICLP</externalDataSource>
    <externalName>SalesforceTicketDiscountRedemption</externalName>
    <label>Partial Points booking</label>
    <pluralLabel>Partial Points bookings</pluralLabel>
</CustomObject>