GearsetPOC/force-app/main/default/objects/SalesforceTicketDiscountRedemption__x/fields/CashValue__c.field-meta.xml
<CustomField>
    <fullName>CashValue__c</fullName>
    <description>CashValue</description>
    <externalDeveloperName>CashValue</externalDeveloperName>
    <label>Cash value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>