GearsetPOC/force-app/main/default/objects/SalesforceTicketDiscountRedemption__x/fields/CurrencyCode__c.field-meta.xml
<CustomField>
    <fullName>CurrencyCode__c</fullName>
    <description>CurrencyCode</description>
    <externalDeveloperName>CurrencyCode</externalDeveloperName>
    <label>Currency code</label>
    <length>128</length>
    <type>Text</type>
</CustomField>