GearsetPOC/force-app/main/default/objects/SalesforceTicketDiscountRedemption__x/fields/CurrencyDescription__c.field-meta.xml
<CustomField>
    <fullName>CurrencyDescription__c</fullName>
    <description>CurrencyDescription</description>
    <externalDeveloperName>CurrencyDescription</externalDeveloperName>
    <label>Currency description</label>
    <length>128</length>
    <type>Text</type>
</CustomField>