GearsetPOC/force-app/main/default/objects/SalesforceTicketDiscountRedemption__x/fields/DepartureDateTime__c.field-meta.xml
<CustomField>
    <fullName>DepartureDateTime__c</fullName>
    <description>DepartureDateTime</description>
    <externalDeveloperName>DepartureDateTime</externalDeveloperName>
    <label>Departure datetime</label>
    <type>DateTime</type>
</CustomField>