GearsetPOC/force-app/main/default/objects/SalesforceTicketDiscountRedemption__x/fields/DestinationDescription__c.field-meta.xml
<CustomField>
    <fullName>DestinationDescription__c</fullName>
    <description>DestinationDescription</description>
    <externalDeveloperName>DestinationDescription</externalDeveloperName>
    <label>Destination description</label>
    <length>128</length>
    <type>Text</type>
</CustomField>