GearsetPOC/force-app/main/default/objects/SalesforceTicketDiscountRedemption__x/fields/NumberOfPassengers__c.field-meta.xml
<CustomField>
    <fullName>NumberOfPassengers__c</fullName>
    <description>NumberOfPassengers</description>
    <externalDeveloperName>NumberOfPassengers</externalDeveloperName>
    <label>Number of passengers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>