GearsetPOC/force-app/main/default/objects/SalesforceTicketDiscountRedemption__x/fields/TravelClassDescription__c.field-meta.xml
<CustomField>
    <fullName>TravelClassDescription__c</fullName>
    <description>TravelClassDescription</description>
    <externalDeveloperName>TravelClassDescription</externalDeveloperName>
    <label>Travel class description</label>
    <length>128</length>
    <type>Text</type>
</CustomField>